# mathoptsolverscmake

./: CMakeLists.txt  LICENSE  README.md
