cmake_minimum_required(VERSION 3.15.0)

project(MathOptSolversCMake LANGUAGES CXX)

option(MATHOPTSOLVERSCMAKE_USE_CLP "Use CLP" OFF)
option(MATHOPTSOLVERSCMAKE_USE_CBC "Use CBC" OFF)
option(MATHOPTSOLVERSCMAKE_USE_XPRESS "Use XPRESS" OFF)
option(MATHOPTSOLVERSCMAKE_USE_CPLEX "Use CPLEX" OFF)
option(MATHOPTSOLVERSCMAKE_USE_GUROBI "Use GUROBI" OFF)
set(MATHOPTSOLVERSCMAKE_HOMEBREW_PREFIX "" CACHE STRING "Homebrew prefix")
if ("${MATHOPTSOLVERSCMAKE_HOMEBREW_PREFIX}" STREQUAL "")
    if(CMAKE_HOST_SYSTEM_PROCESSOR STREQUAL "x86_64")
        set(MATHOPTSOLVERSCMAKE_HOMEBREW_PREFIX "/usr/local")
    else()
        set(MATHOPTSOLVERSCMAKE_HOMEBREW_PREFIX "/opt/homebrew")
    endif()
endif()

# Require C++11.
set(CMAKE_CXX_STANDARD 11)

# Enable output of compile commands during generation.
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Add sub-directories.
add_subdirectory(extern)
